# FileTagger

./: .gitignore  CMakeLists.txt  README.md
FileTagger/: CMakeLists.txt  FileTagger.cpp  FileTagger.h  TagManager.cpp  TagManager.h
